# albert-launcher-plugins

./: .gitignore  .gitmodules  README.md  albert.pyi
base64_decoder/: __init__.py
dns_lookup/: README.md  __init__.py  test.py
docker/: .gitignore  __init__.py  icon.md  test.py
edit/: __init__.py
em-keyboard/: __init__.py  test.py
help/: README.md  __init__.py  commands.example.yml  test.py
http_codes/: README.md  __init__.py  http.py
ip_utils/: README.md  __init__.py  test.py
lib/: albert.py  albert.pyi  commandlib.py  template.py
libvirt/: README.md  __init__.py  test.py  virtmanager.py
mpd-ctrl/: __init__.py  mpd2.py  test.py
mpv/: README.md  __init__.py  indexer.py  test.py
number-converter/: __init__.py  kanji.py
ps_utils/: __init__.py  ps.py  test.py
rdp/: __init__.py  config.example.yml
secretservice/: README.md  __init__.py  build.sh  secretservice.py  test.py
secretservice/clipboard/: CMakeLists.txt
secretservice/clipboard/src/: CMakeLists.txt  main.cpp
totp/: .gitignore  CMakeLists.txt  __init__.py  build.sh  test.py
totp/otpgen-python/: CMakeLists.txt  bindings.cpp
unicode-tools/: .gitignore  __init__.py  lib.py  test.py
uuidgen/: __init__.py
